# GitCode-API

./: .gitignore  LICENSE  Makefile  README.md  README.zh.md  pyproject.toml
.claude/skills/gitcode-api/: SKILL.md
.claude/skills/gitcode-api/references/: api-reference.md  workflow-patterns.md
.github/workflows/: python-publish.yml
docs/: coffee.rst  conf.py  index.rst  requirements.txt
docs/_static/: custom.css
docs/_templates/: layout.html
docs/rest_api/: guide.rst  index.rst  oauth.rst  orgs.rst  quickstart.rst  repos.rst  search.rst  users.rst
docs/rest_api/repos/: branch.rst  commit.rst  issues.rst  labels.rst  member.rst  milestone.rst  pulls.rst  release.rst  tag.rst  webhooks.rst
docs/sdk/: cli.rst  client_api.rst  index.rst  quickstart.rst  reference.rst
examples/: .env.example  README.md  _shared.py  async_list_branches.py  get_current_user.py  get_repository_overview.py  list_pull_requests.py
gitcode_api/: __init__.py  _base_client.py  _client.py  _exceptions.py  _models.py  cli.py
gitcode_api/resources/: __init__.py  _shared.py  account.py  collaboration.py  misc.py  repositories.py
scripts/: build_gitcode_sphinx_docs.py
tests/: conftest.py  test_base_client.py  test_cli.py  test_client.py  test_models.py  test_resources_account.py  test_resources_collaboration.py  test_resources_misc.py  test_resources_repositories.py
tests/restful_docs_examples/: _doc_helpers.py  test_rest_api_docs_examples.py
